WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12136
REGRESSION: Counters-related leaks
https://bugs.webkit.org/show_bug.cgi?id=12136
Summary
REGRESSION: Counters-related leaks
mitz
Reported
2007-01-06 00:43:31 PST
Many leaks like this: Call stack: [thread ffffffff]: | 0x0 | start | _start | main | dumpRenderTree | runTest | -[NSRunLoop runMode:beforeDate:] | CFRunLoopRunSpecific | __CFRunLoopRun | __CFRunLoopDoSources0 | _sendCallbacks | -[NSURLConnection(NSURLConnectionInternal) _sendCallbacks] | -[NSURLConnection(NSURLConnectionInternal) _sendDidFinishLoadingCallback] | -[WebCoreResourceHandleAsDelegate connectionDidFinishLoading:] | WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*) | WebCore::MainResourceLoader::didFinishLoading() | WebCore::FrameLoader::finishedLoading() | WebCore::DocumentLoader::finishedLoading() | WebCore::FrameLoader::end() | WebCore::FrameLoader::endIfNotLoading() | WebCore::Document::finishParsing() | WebCore::HTMLTokenizer::finish() | WebCore::HTMLTokenizer::end() | WebCore::HTMLParser::finished() | WebCore::Document::finishedParsing() | WebCore::FrameLoader::finishedParsing() | WebCore::FrameLoader::checkCompleted() | WebCore::FrameLoader::checkEmitLoadEvent() | WebCore::Document::implicitClose() | WebCore::FrameView::layout(bool) | WebCore::RenderView::layout() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderObject::recalcMinMaxWidths() | WebCore::RenderCounter::calcMinMaxWidth() | WebCore::RenderCounter::originalString() const | WebCore::counter(WebCore::RenderObject*, WebCore::AtomicString const&, bool) | operator new(unsigned long) | WTF::fastMalloc(unsigned long)
Attachments
Delete child counter nodes, don't just remove them from the node map
(1.07 KB, patch)
2007-01-06 03:27 PST
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-01-06 03:27:23 PST
Created
attachment 12255
[details]
Delete child counter nodes, don't just remove them from the node map
David Kilzer (:ddkilzer)
Comment 2
2007-01-06 04:22:40 PST
Committed revision 18639.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug