WebCore:

Reviewed by Maciej.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12136
          REGRESSION: Counters-related leaks

        * rendering/RenderCounter.cpp:
        (WebCore::destroyCounterNodeChildren): Delete the child counter nodes.



Canonical link: https://commits.webkit.org/15660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18639 268f45cc-cd09-0410-ab3c-d52691b4dbfc